# pytest-telegram-notifier

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest-telegram-notifier.ini  pytest-telegram-notify.ini  requirements.txt
.github/workflows/: main.yml
telegram_notifier/: bot.py  exceptions.py  hooks.py  plugin.py  telegram_manager.py  telegraph.py
telegram_notify/: bot.py  exceptions.py  hooks.py  plugin.py  telegram_manager.py
